Draft1, Main content complete

--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -6,7 +6,7 @@
 %==============================================================================
  
 This chapter aims to detail the procedure used to calculate the detector exposure or sensitivity to neutrinos for the DG$\mathrm{_{\text{low}}}$ region. The efficiencies calculated in the last chapter are used and the final expected neutrino rates are calculated. The first part of the chapter describes the exposure calculation along with the exposure contribution from different channels. Systematic uncertainties which can arise during the full analysis along with their contribution to the exposure are also discussed. 
-The second part of the chapter details the results of the unblinding where no possible neutrino candidates were found for the investigated angular range. Using this information an upper limit on the incoming flux of UHE $\nu$ is calculated. This limit is further compared to the one obtained by the previous analysis for the same time period but without the contribution of new triggers. The overall improvement to this limit is a crucial result of this work. 
+The second part of the chapter details the results of the unblinding where no possible neutrino candidates were found for the investigated angular range. Using this information an upper limit on the incoming flux of UHE$\nu$ is calculated. This limit is further compared to the one obtained by the previous analysis for the same time period but without the contribution of new triggers. The overall improvement to this limit is a crucial result of this work. 
 
 
 \section{Exposure Calculation}
@@ -51,7 +51,7 @@ Exposure calculation still needs to account for the detector configuration and i
   \xi^{i,c}(E_{\nu}) = \frac{\sigma^{i,c}(E_{\nu})}{m_N} \int_{t} M_{\text{hex}}^{i,c}(E_{\nu}) \cdot n_{\text{hex}}(t) \cdot dt =  \frac{\sigma^{i,c}(E_{\nu})}{m_N} \cdot M_{\text{hex}}^{i,c}(E_{\nu}) \cdot N_{\text{hex}}
 \end{equation}
 
-,$\sigma^{i,c}(E_{\nu})$ is the neutrino nucleon cross-section taken from~\cite{Cooper-Sarkar:2011jtt} and $N_{hex}$ is the total number of active 6T5 hexagons integrated in time over the search period. The value for $N_{hex}$ calculated for the period analysed is 2.8 $\times 10^{11}$ which is about $\sim$6.75 yrs equivalent years of a fully functional SD array. The energy dependent exposure for different flavors and interaction channels is shown in fig~\ref{fig:Exp_flavors_comp}. It is necessary to point out again that the double bang showers which can be produced by $\nu_{tau}$ are not taken into account for this analysis which was also mentioned in sec.~\ref{sec:sim_DGL} 
+,$\sigma^{i,c}(E_{\nu})$ is the neutrino nucleon cross-section taken from~\cite{Cooper-Sarkar:2011jtt} and $N_{hex}$ is the total number of active 6T5 hexagons integrated in time over the search period. The value for $N_{hex}$ calculated for the period analysed is 2.8 $\times 10^{11}$ which is about $\sim$6.75 equivalent years of a fully functional SD array. The energy dependent exposure for different flavors and interaction channels is shown in fig~\ref{fig:Exp_flavors_comp}. It is necessary to point out again that the double bang showers which can be produced by $\nu_{tau}$ are not taken into account for this analysis which was also mentioned in sec.~\ref{sec:sim_DGL} 
 
 \begin{figure}[t!]
   \centering
@@ -72,24 +72,24 @@ An effective or total exposure, $\xi_{tot}(E_{\nu}) = \sum_{i}\sum_{c} \xi^{i,c}
 
 As seen in the figure the $\nu_e$ CC channels contributes the most to the total neutrino exposure($\sim$85\%). The exposure rises rapidly at lower energies and then mostly flattens with just a slight increase which is due to the energy dependent neutrino cross-section. The shape is due to the neutrino detection efficiency which is small for lower energies as shown in fig~\ref{fig:Eff_v_theta_CC_E} in the last chapter. The next dominant channels are the $\nu_{\tau}$ and $\nu_{\mu}$ CC which are assumed to have a similar detection efficiency as the NC channel but have a higher value of cross-section. The NC channel contribution is very small($\sim$5\%) due to the reasons discussed in section~\ref{subsec:nu_sel_nudeteff}.  
 
-The exposure calculated this analysis is also compared to the one calculated using the previous analysis for the same time period in fig~\ref{fig:Exp_flavors_comp}. For the CC channel a $\sim$5x improvement is seen at lower energies and a $\sim$2x improvement at higher energies. For NC this improvement is not that significant. There is a 2x improvement at lower energies and a 1.5x improvement at higher energies. The improvement at lower energies is due to the inclusion of the new triggers MoPS and ToTd which enhance the detection efficiency at lower energies. The improvement at higher energies is mainly due to the improved Fisher analysis. Since the $\nu_e$ CC contribution to the total exposure is significantly higher than other channels, the overall improvement to the total exposure is only slightly less than the improvement to the $\nu_e$ CC channel. 
+The exposure calculated this analysis is also compared to the one calculated using the previous analysis for the same time period in fig~\ref{fig:Exp_flavors_comp}. For the CC channel a $\sim 5 \times$ improvement is seen at lower energies and a $\sim$2x improvement at higher energies. For NC this improvement is not that significant. There is a 2x improvement at lower energies and a 1.5$\times$ improvement at higher energies. The improvement at lower energies is due to the inclusion of the new triggers MoPS and ToTd which enhance the detection efficiency at lower energies. The improvement at higher energies is mainly due to the improved Fisher analysis. Since the $\nu_e$ CC contribution to the total exposure is significantly higher than other channels, the overall improvement to the total exposure is only slightly less than the improvement to the $\nu_e$ CC channel. 
 
 \section{Systematic uncertainties}
 \label{sec:det_uncert}
-This section aims to detail the systematic uncertainties which can arise during the course analysis and their contribution to the exposure. The systematic uncertainties in an analysis can arise at any point. The investigations start already at the simulation level where the uncertainties from the primary interaction, hadronic interaction models, thinning etc. can lead to uncertainties in the neutrino detection efficiency. At the next step the uncertainties in the reconstruction algorithms could also affect the final exposure. The cross-sections used for the final calculation of exposure could also prove to be a source of systematic uncertainties. Other parameters such as the number of hexagons are very well- defined parameters and are not expected to have a contribution to the systematic uncertainties in the exposure. For this analysis the systematic uncertainties are either sourced through previous analysis~\cite{gap_systematics} or are calculated for certain cases. Since the analysis has been done once before albeit without the new triggers the sources of systematic uncertainties though not exactly the same are very similar to~\cite{gap_note_2013}. 
+This section aims to detail the systematic uncertainties which can arise during the course analysis and their contribution to the exposure. The systematic uncertainties in an analysis can arise at any point. The investigations start already at the simulation level where the uncertainties from the primary interaction, hadronic interaction models, thinning etc. can lead to uncertainties in the neutrino detection efficiency. At the next step the uncertainties in the reconstruction algorithms could also affect the final exposure. The cross-sections used for the final calculation of exposure could also prove to be a source of systematic uncertainties. Other parameters such as the number of hexagons are very well-defined parameters and are not expected to have a contribution to the systematic uncertainties in the exposure. For this analysis the systematic uncertainties are either sourced through previous analysis~\cite{gap_systematics} or are calculated for certain cases. Since the analysis has been done once before albeit without the new triggers the sources of systematic uncertainties though not exactly the same are very similar to~\cite{gap_note_2013}. 
 The sources of systematic uncertainties considered for this analysis are discussed below:
 \begin{description}
-  \item \textbf{Primary interaction generator} For the simulations used in this analysis which is based on CORSIKA 7.2 the only available option for the primary interaction generator is the HERWIG~\cite{} code. Thus, it was not possible to compare the differences that could arise due to the use of different primary interaction generators. These systematic uncertainties were taken from ~\cite{gap_systematics} where PYTHIA~\cite{} and several versions of HERWIG are compared for CORSIKA 6. The uncertainties were found to be [+2.6\%, 3.7\%]. 
-  \item \textbf{Parton Distribution function} Again the uncertainties are taken from ~\cite{gap_systematics}since this functionality is again not available in CORSIKA 7. The systematic uncertainties on exposure quoted in the source are [+4\%, -5\%].
+  \item \textbf{Primary interaction generator} For the simulations used in this analysis which is based on CORSIKA 7.2 the only available option for the primary interaction generator is the HERWIG~\cite{Corcella:2000bw} code. Thus, it was not possible to compare the differences that could arise due to the use of different primary interaction generators. These systematic uncertainties were taken from ~\cite{gap_systematics} where PYTHIA~\cite{Sjostrand:2006za} and several versions of HERWIG are compared for CORSIKA 6. The uncertainties were found to be [+2.6\%, 3.7\%]. 
+  \item \textbf{Parton Distribution function} Again the uncertainties are taken from ~\cite{gap_systematics}since this functionality is not available in CORSIKA 7. The systematic uncertainties on exposure quoted by the source are [+4\%, -5\%].
   \item \textbf{Hadronic interaction models} The systematic uncertainties for the hadronic interaction models were calculated in this study and are detailed in App.~\ref{sec:app_2}. Three models QGSJETTII-04, EPOS-LHC and SIBYLL 2.3c were used for the calculation. The uncertainties were calculated by comparing the three models for a zenith of 72 deg and a primary energy of $10^{19}$eV. The systematic uncertainties were found to be (-5\%) where SIBYLL 2.3c is used as reference.
   \item \textbf{Shower simulator and thinning algorithm} The systematic uncertainties due to the differing shower simulation programs was estimated thorough the comparison quoted in~\cite{Huege:2022xbo} for both hadronic cascades and electromagnetic showers. The differences seen in different software are of the order $\sim 15\%$ which agree nicely with the results from~\cite{gap_systematics}. The uncertainties due to thinning were also calculated in~\cite{gap_systematics} and were found to be $\sim 7\%$.
-  \item \textbf{Detector simulation} The differences in the detector simulation software i.e a GEANT4 based approach used in this analysis to other approaches is already compared in ~\cite{gap_note_det_systematics}. The systematic uncertainties were found to be $\\pm 5\%$. Further, in this analysis the simulated showers were reconstructed using two different Offline tags with no significant differences observed in the final exposure. 
+  \item \textbf{Detector simulation} The differences in the detector simulation software i.e. a GEANT4 based approach used in this analysis to other approaches is already compared in~\cite{gap_note_det_systematics}. The systematic uncertainties were found to be $\pm 5\%$. Further, in this analysis the simulated showers were reconstructed using two different Offline tags with no significant differences observed in the final exposure. 
   \item \textbf{Number of Hexagons} For the total number of hexagons calculated we implicitly assume that all the stations are equal. However, if the new triggers are not active in a given station, this hexagon might not contribute the same as the other ones. So there is a systematic error associated with using the hexagon files as they are as a station with 1 PMT is counted full there but likely shouldn't for low energy neutrino showers. So simply put: the ToTd or MoPS not active are not affecting 6T5s, but only because 6T5 doesn't account for this fact. Or: the 6T5 is a binary condition assuming a station is either alive or not. While for any analysis with new triggers, in principle, we have to account for the situation of a station being alive but not sending new triggers. The systematic uncertainty associated with this effect was calculated by looking at the average number of stations with only one functional PMT over time. The uncertainty associated with this effect was found to be $\pm 2\%$ at most. 
   \item \textbf{Reconstruction algorithm} The effect of different reconstruction algorithm were also tested in this analysis. Two modules HASReconstructionOG and the normal top-down selection module were tested. Though the total number of events that are reconstructed by these modules can differ the difference in the final exposure is found to be $< \pm 1\%$. 
   \item \textbf{Neutrino cross-sections} The systematic uncertainties due to the neutrino cross-sections were taken from~\cite{Cooper-Sarkar:2011jtt} which are of the order $\pm 7\%$.
 \end{description}
 
-Table ~\ref{tab:systematic_uncertainties} summarises the  source of systematic uncertainties and their contribution to the total exposure. The total systematic uncertainties are calculated by adding them in quadrature. As discussed later in sec.~\ref{subsec:Conrad} the uncertainties are directly incorporated in the limit by applying the Conrad method~\cite{Conrad:2002kn} to calculate the confidence intervals. 
+Table ~\ref{tab:systematic_uncertainties} summarizes the  source of systematic uncertainties and their contribution to the total exposure. The total systematic uncertainties are calculated by adding them in quadrature. As discussed later in sec.~\ref{subsec:Conrad} the uncertainties are directly incorporated in the limit by applying the Conrad method~\cite{Conrad:2002kn} to calculate the confidence intervals. 
 
 \begin{table}[h!]
   \centering
@@ -164,7 +164,7 @@ The Fisher value distribution for the test sample is shown in fig~\ref{fig:Fish_
 
 \subsection{Reevaluated 20\% test search sample and 60\% search sample}
 \label{subsec:unblind_60}
-After the errors discovered in the initial partial unblinding were fixed by altering the reconstruction the final unblinding was again performed in two stages. Initially a 20\% part was unblinded and then the remaining 60\% blinded sample was analysed. Again \textbf{0 neutrino candidates} were found after candidate selection. The Fisher value distributions as a function of reconstructed zenith angle for both the test and search samples are presented in fig~\ref{fig:Fish_bkg_test} and fig~\ref{fig:Fish_bkg_search} respectively. The results of the test sample (brown) and search sample (green )are overlaid over the background training sample (purple) in each plot with the dashed lines indicating the value of the $\mathcal{F_{cut}}$ obtained according to eq.~\ref{eq:fisher_poly_cut}. As it can be seen the distributions are compatible to each other within statistical fluctuations. The results of the unblinding for each sub-angular region for a combination of test and search samples is presented in fig~\ref{fig:Fisher_cut_2}. The distribution is scaled by the ratio of the integrals and the exponential fit is reevaluated again by comparing the Observed values to the predicted values from the fit. This comparison confirms that the exponential tail assumption is a reasonable enough to determine the $mathcal{F_{cut}}$. The goodness of the fit is once against presented in tab.~\ref{tab:Cut_eval_unblind} in the form similar to table~\ref{tab:Cut_eval}. This time for the observed values the numbers are calculated from the much larger search sample. It is found that the tails of the distributions which typically seemed to have fit badly also fit reasonably well. The events in the search sample that have $\mathcal{F}$ values close to the $\mathcal{F_{cut}}$ were again carefully checked and were found to be either due to the issues with the segmentation algorithm or known issues such as partial shower containment or large number of non-working PMTs both issues have also been seen in previous analysis. 
+After the errors discovered in the initial partial unblinding were fixed by altering the reconstruction the final unblinding was again performed in two stages. Initially a 20\% part was unblinded and then the remaining 60\% blinded sample was analysed. Again \textbf{0 neutrino candidates} were found after candidate selection. The Fisher value distributions as a function of reconstructed zenith angle for both the test and search samples are presented in fig~\ref{fig:Fish_bkg_test} and fig~\ref{fig:Fish_bkg_search} respectively. The results of the test sample (brown) and search sample (green) are overlaid over the background training sample (purple) in each plot with the dashed lines indicating the value of the $\mathcal{F_{cut}}$ obtained according to eq.~\ref{eq:fisher_poly_cut}. As it can be seen the distributions are compatible to each other within statistical fluctuations. The results of the unblinding for each angular sub-region for a combination of test and search samples is presented in fig~\ref{fig:Fisher_cut_2}. The distribution is scaled by the ratio of the integrals and the exponential fit is reevaluated again by comparing the Observed values to the predicted values from the fit. This comparison confirms that the exponential tail assumption is a reasonable enough to determine the $mathcal{F_{cut}}$. The goodness of the fit is once against presented in tab.~\ref{tab:Cut_eval_unblind} in the form similar to table~\ref{tab:Cut_eval}. This time for the observed values the numbers are calculated from the much larger search sample. It is found that the tails of the distributions which typically seemed to have fit badly also fit reasonably well. The events in the search sample that have $\mathcal{F}$ values close to the $\mathcal{F_{cut}}$ were again carefully checked and were found to be either due to the issues with the segmentation algorithm or known issues such as partial shower containment or large number of non-working PMTs both issues have also been seen in previous analysis. 
 
 \begin{figure}[h!]
   \centering
@@ -198,7 +198,7 @@ After the errors discovered in the initial partial unblinding were fixed by alte
       \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/Fisher_fit_search+test_bkg_region_70.5_73.5.pdf}
       \caption{$ 70.5^{\circ} <\theta_{\text{Rec}} \leq 76.5^{\circ}$}
    \end{subfigure}
-   \caption{Comparison of the $\mathcal{F}$ value distributions for the background training (purple) and the test+search samples (blue) for the different angular sub-regions. The test+search sample is scaled by the ratio of the integrals of the background training and test+search samples. The black dashed line indicates the exponential fit to the tail of the distribution. The red dashed line indicates the value of the $\mathcal{F_{cut}}$ obtained from the fit. For the test+search sample the observed values are compared to the predicted values from the fit for ht.}
+   \caption{Comparison of the $\mathcal{F}$ value distributions for the background training (purple) and the test+search samples (blue) for the different angular sub-regions. The test+search sample is scaled by the ratio of the integrals of the background training and test+search samples. The black dashed line indicates the exponential fit to the tail of the distribution. The red dashed line indicates the value of the $\mathcal{F_{cut}}$ obtained from the fit. For the test+search sample the observed values are compared to the predicted values from the fit.}
     \label{fig:Fisher_cut_2}
 
 \end{figure}
@@ -256,7 +256,7 @@ The Feldman \& Cousins treatment is a frequentist method which requires the back
 
 \subsection{Conrad approach}
 \label{subsec:Conrad}
-The Conrad method for calculating confidence intervals allows the inclusion of systematic uncertainties in the evaluation. Using this approach the uncertainties in the background prediction, background detection and the signal detection efficiencies can be incorporated in the confidence interval calculation by integrating over the PDFs of these parameters~\cite{Conrad:2002kn}. The method computes the upper limit based on a likelihood ratio between the observed data and the null hypothesis (no signal). For this work the interval was calculated using POLE++~\cite{Conrad:2005zm} which is a C++ program that implements the Conrad method. The systematic uncertainty on exposure was estimated to be as [...] as mentioned in section~\ref{sec:det_uncert}. Using a uniform PDF to characterise the exposure and a Gaussian assumption for background, for a 90\% confidence interval in the case of zero signal and background events the upper and lower limits are given as: 
+The Conrad method for calculating confidence intervals allows the inclusion of systematic uncertainties in the evaluation. Using this approach the uncertainties in the background prediction, background detection and the signal detection efficiencies can be incorporated in the confidence interval calculation by integrating over the PDFs of these parameters~\cite{Conrad:2002kn}. The method computes the upper limit based on a likelihood ratio between the observed data and the null hypothesis (no signal). For this work the interval was calculated using POLE++~\cite{Conrad:2005zm} which is a C++ program that implements the Conrad method. The systematic uncertainty on exposure was estimated to be as [+20\%, -14\%] as mentioned in section~\ref{sec:det_uncert}. Using a uniform PDF to characterize the exposure and a Gaussian assumption for background, for a 90\% confidence interval in the case of zero signal and background events the upper and lower limits are given as: 
 
 \begin{equation}
   \label{eq:Conrad_lim}
@@ -267,12 +267,12 @@ The interval is smaller in comparison to the Feldman \& Cousins method due to th
 
 \subsection{Final calculation}
 \label{subsec:final_lim}
-After the determination of $N_{up}$ using the Conrad approach the equation~\ref{eq:integ_lim} can be solved to determine the upper limit to the diffused flux of UHE$\nu_s$. The integral goes from $E_min = 10^{17.5} $eV till $E_max = 10^{20.5} $eV which is the total energy range explored in the simulations. It is also important to note that the limit is only valid for a smaller energy window. The single flavour 90\% C.L. integrated limit is given by 
+After the determination of $N_{\text{up}}$ using the Conrad approach the equation~\ref{eq:integ_lim} can be solved to determine the upper limit to the diffused flux of UHE$\nu_s$. The integral goes from $E_{\text{min}} = 10^{17.5} $eV till $E_{\text{max}} = 10^{20.5} $eV which is the total energy range explored in the simulations. It is also important to note that the limit is only valid for a smaller energy window. The single flavour 90\% C.L. integrated limit is given by 
 \begin{equation}
   \label{eq:final_lim} 
   \mathrm{k_{90} < 1.9 x 10^{-7} GeV cm^{-2} s^{-1} sr^{-1}},
 \end{equation}
-It applies to an energy range of $E_{\nu} \epsilon [1.3 \times 10^{18} - 2.5 \times 10^{19.5}]$ which is the energy range for which $\sim$90\% total event rate is expected in the case of $E^{-2}_{nu}$ flux. The value along with the 90\% energy range is plotted as a dashed purple line in fig~\ref{fig:Limit_comp_1}.
+It applies to an energy range of $E_{\nu} \epsilon [1.3 \times 10^{18} - 2.5 \times 10^{19.5}]$ which is the energy range for which $\sim$90\% total event rate is expected in the case of $E^{-2}_{\nu}$ flux. The value along with the 90\% energy range is plotted as a dashed purple line in fig~\ref{fig:Limit_comp_1}.
 
 \begin{figure}[t!]
   \centering
