--- a/thesis_skel/thesis_follow.tex
+++ b/thesis_skel/thesis_follow.tex
@@ -60,7 +60,7 @@ The effective area is flavour dependent since for each flavour the shower develo
 
 , where $\varepsilon_{i,c}$ is the neutrino identification efficiency for a 6T5 unit. The declination dependence is taken into account by the $\theta(t)$ dependence of the efficiency. The instantaneous effective area for electron neutrinos with CC interactions in km$^2$ and different theta is plotted in fig.~\ref{fig:Eff_Area}. The effective area increases with increasing primary energy. It also increases with zenith angles till $\sim$70$^\circ$ after which there is a slight decrease in the effective area which is due to the decrease in neutrino sensitivity at higher zenith angles discussed earlier in section~\ref{subsec:nu_sel_nudeteff}. 
 
-The exposure to point-like sources of UHE neutrinos can then be calculated by integrating the effective area for a given time interval and summing over the different flavours (1:1:1 expectation at Earth ) and channels as follows:
+The exposure to point-like sources of UHE neutrinos can then be calculated by integrating the effective area for a given time interval and summing over the different flavours (1:1:1 expectation at Earth) and channels as follows:
 \begin{equation}
   \label{eq:exposure_point}
   \xi(E_{\nu}, \delta) = \sum_{i,c} \int_{t} \mathcal{A_{i,c}} \, (E_{\nu},\theta(t),t) \, dt
@@ -90,7 +90,7 @@ The exposure is $\delta$ dependent due to the dependence of effective area on $\
 Since no neutrino candidate was discovered in the search window an upper limit to a  point-like source of UHE neutrinos can be calculated. Similar to the calculation for the diffuse flux the number of expected neutrino events from a point like source at a given declination can be written as:
 
 \begin{equation}
-  N_{\text[expected]}(\delta) = \int_{E_{\text{min}}}^{E_{\text{max}}}  \phi(E_{\nu}) \, \xi(E_{\nu}, \delta) \, dE_{\nu}
+  N_{\text{expected}}(\delta) = \int_{E_{\text{min}}}^{E_{\text{max}}}  \phi(E_{\nu}) \, \xi(E_{\nu}, \delta) \, dE_{\nu}
 \end{equation}
 
 The point source flux is assumed to be independent of time and is assumed to be characterized as a power law, $\phi(E_{\nu}) = k_{\text{PS}} E_{\nu}^{-2}$ for all declinations. The integrated upper-limit from each source can then be further calculated as follows:
@@ -106,15 +106,15 @@ For this study initially a time period from 1 Jan 2014 till 31 December 2021 is 
 \begin{figure}[th!]
   \centering
   \includegraphics[width=\textwidth]{thesis_figures/PointLimits/Point_comp_new_old.pdf}
-  \caption{Comparison of the 90\% C.L. declination dependent upper-limit (01.01.2014 - 31.12.2021) for the DG$_{\text{low}}$ channel of a single flavor point-like flux of UHE . The limit (dashed line) is compared to the limit obtained from the previous analysis (solid line) for the same time period.}
+  \caption{Comparison of the 90\% C.L. declination dependent upper-limit (01.01.2014–31.12.2021) for the DG$_{\text{low}}$ channel of a single flavor point-like flux of UHE. The limit (dashed line) is compared to the limit obtained from the previous analysis (solid line) for the same time period.}
   \label{fig:Dec_limit_new old}
   \includegraphics[width=14.5cm]{thesis_figures/PointLimits/Point_comp_combined.pdf}
-  \caption{90\% C.L. declination dependent upper-limit for different time periods for the DG$_{\text{low}}$ channel of a single flavor point-like flux of UHE . The limit for 01.01.2004-31.12.2013 obtained with the previously done analysis (solid, orange) is combined with the limit obtained in this analysis for 01.01.2014-31.12.2021 (dashed, purple) to give the combined limit for 01.01.2004-31.12.2021 (dashed dotted, black).}
+  \caption{90\% C.L. declination dependent upper-limit for different time periods for the DG$_{\text{low}}$ channel of a single flavor point-like flux of UHE. The limit for 01.01.2004-31.12.2013 obtained with the previously done analysis (solid, orange) is combined with the limit obtained in this analysis for 01.01.2014-31.12.2021 (dashed, purple) to give the combined limit for 01.01.2004-31.12.2021 (dashed dotted, black).}
   \label{fig:Dec_limit_comb1}
 \end{figure}
 
-The 90\% C.L. declination dependent upper-limit for the DG$_{\text{low}}$ channel is shown in fig.~\ref{fig:Dec_limit_new old}. The limit is the stringent for the times the source is seen the longest. The limit is calculated for the energy range $\sim$ 2.0 $\times 10^{18}$eV - $\times 10^{20}$eV. The dependence of energy intervals is minimal. This limit is also compared to the limit obtained from the previous analysis for the same time period in the same figure. As it can be seen the limit is significantly improved with new triggers fulfilling one of the primary objectives of this thesis. Further a combined limit is calculated where the old analysis is applied for the time period 01.01.2004 - 31.12.2013 and the analysis presented in this thesis is applied for the time period 01.01.2014 - 31.12.2021. This combination is only done under the assumption that the systeamtics for both the time periods are similar and 0 neutrino candidates were found in both time periods. This combination along with the limits from the separate time periods is shown in Fig.~\ref{fig:Dec_limit_comb1}. Further this combination is also compared to the point-like source limit calculated with the old analysis for the time period 01.01.2004-31.12.2021. This is presented in fig.~\ref{fig:Dec_limit_comb2}. For the best declination range of the DG$_{\text{low}}$ channel the limit is improved by a factor of $\sim$ 2.5.... for the time period where both the new triggers and old triggers were active i.e 2014-2021. The combined limit obtained in this analysis is about ...x lower Since the exposure at high energies is a few magnitudes larger than the one at low energies, the new triggers do not improve the overall limit significantly. The improvement is primarily due to the changes in the Fisher discriminant analysis which were proposed and implemented in this thesis.
-\todo{Get this number }
+The 90\% C.L. declination dependent upper-limit for the DG$_{\text{low}}$ channel is shown in fig.~\ref{fig:Dec_limit_new old}. The limit is the stringent for the times the source is seen the longest. The limit is calculated for the energy range $\sim$ 2.0 $\times 10^{18}$eV - $\times 10^{20}$eV. The dependence of energy intervals is minimal. This limit is also compared to the limit obtained from the previous analysis for the same time period in the same figure. As it can be seen the limit is significantly improved with new triggers fulfilling one of the primary objectives of this thesis. Further a combined limit is calculated where the old analysis is applied for the time period 01.01.2004–31.12.2013 and the analysis presented in this thesis is applied for the time period 01.01.2014–31.12.2021. This combination is only done under the assumption that the systematics for both the time periods are similar, and 0 neutrino candidates were found in both time periods. This combination along with the limits from the separate time periods is shown in Fig.~\ref{fig:Dec_limit_comb1}. Further this combination is also compared to the point-like source limit calculated with the old analysis for the time period 01.01.2004-31.12.2021. This is presented in fig.~\ref{fig:Dec_limit_comb2}. For the best declination range of the DG$_{\text{low}}$ channel (-74$^{\circ}$) the limit is improved by a factor of $\sim$ 1.5. for the time period where both the new triggers and old triggers were active i.e. 2014-2021. Since the exposure at high energies is a few magnitudes larger than the one at low energies, the new triggers do not improve the overall limit significantly. The improvement is primarily due to the changes in the Fisher discriminant analysis which were proposed and implemented in this thesis.
+
 
 % \begin{figure}[th!]
 %   \centering
@@ -126,27 +126,25 @@ The 90\% C.L. declination dependent upper-limit for the DG$_{\text{low}}$ channe
 \begin{figure}[h!]
   \centering
   \includegraphics[width=\textwidth]{thesis_figures/PointLimits/Point_comp_combined_2.pdf}
-  \caption{Comparison of the 90\% C.L. declination dependent upper-limit (01.01.2004 - 31.12.2021) for the DG$_{\text{low}}$ channel of a single flavor point-like flux of UHE . The limit (dashed dotted) is compared to the limit obtained from the previous analysis (solid line) for the same time period.}
+  \caption{Comparison of the 90\% C.L. declination dependent upper-limit (01.01.2004–31.12.2021) for the DG$_{\text{low}}$ channel of a single flavor point-like flux of UHE. The limit (dashed dotted) is compared to the limit obtained from the previous analysis (solid line) for the same time period.}
   \label{fig:Dec_limit_comb2}
   \includegraphics[width=\textwidth]{thesis_figures/PointLimits/Point_comp_combined_3.pdf}
-  \caption{The upper limits  (01.01.2004 - 31.12.2021) at 90\% C.L. for different neutrino searches performed at the Pierre Auger Observatory of a single flavor point-like flux of UHE . The limit obtained in this analysis (dashed dotted, green) for the DG$_{\text{low}}$ channel is compared to the limits obtained for the DG$_{\text{high}}$ and ES channels.}
+  \caption{The upper limits  (01.01.2004–31.12.2021) at 90\% C.L. for different neutrino searches performed at the Pierre Auger Observatory of a single flavor point-like flux of UHE . The limit obtained in this analysis (dashed dotted, green) for the DG$_{\text{low}}$ channel is compared to the limits obtained for the DG$_{\text{high}}$ and ES channels.}
   \label{fig:Dec_limit_comb3}
 \end{figure}
 
-A cross-check of the diffuse limit is obtained from the point source analysis by performing double integration of the exposure, $\xi(E_{\nu}, \delta)$ in a similar way as done in~\cite{gap_note_2013}.
+A cross-check of the diffuse limit is obtained from the point source analysis by performing double integration of the exposure, $\xi(E_{\nu}, \delta)$ similar to what was done in~\cite{gap_note_2013}.
 
 The diffuse limit can be written as:
 \begin{equation}
   k_{\text{PS}}^{90\% \text{CL}} < \frac{N_{\text{Up}}}{\int_{log_{10}E_{\text{min}}}^{log_{10}E_{\text{max}}} \int_{-\pi/2}^{\pi/2}2\pi \cdot cos(\delta) \cdot E_{\nu}^{-1} \cdot \xi(E_{\nu}, \delta) \cdot ln(10) \cdot d(log_{10}(E_{\nu})) \cdot d\delta}
 \end{equation}
 
-\todo{Calculate this }
 The diffuse limit from point source analysis is given as: 
 \begin{equation}
-  k_{\text{PS}}^{90\%\text{CL}} < 2.0000 \times 10^{-8} \text{GeV cm}^{-2} \text{s}^{-1} \text{sr}^{-1}
+  k_{\text{PS}}^{90\%\text{CL}} < 2.06 \times 10^{-7} \text{GeV cm}^{-2} \text{s}^{-1} \text{sr}^{-1}
 \end{equation}
 
-\todo{Write a bit more about crosschecks}
 Which agrees with the value mentioned in eq.~\ref{eq:final_lim}. . 
 
 It is also important to mention that even though the overall sensitive declination range for the DG$_{\text{low}}$ analysis is small in comparison to other channels~\cite{Aab_2019_point}, the improvement presented in this thesis is still important as the sensitive declination ranges are not fully overlapping. Thus, if there is a point source at between declinations $ \delta \in [-80^{\circ}- -68^{\circ}]$ then DG$_{\text{low}}$ channel offers the only window at Auger to see UHE$\nu_s$ from such a source.  
@@ -158,42 +156,41 @@ It is also important to mention that even though the overall sensitive declinati
 %   \label{fig:Dec_limit_comb3}
 % \end{figure}
 
-\todo{Make table of sources}
-The limit obtained in this analysis was then used to constraint some interesting sources which exclusively lie in the DG$_{\text{low}}$ sensitive range. The sources were selected based on their declination and expected energies of neutrinos they could produce which could lie in the region explored. The upper limts on the expected neutrino flux are given under the same assumptions the limts are calculated for i.e. a $E^{-2}$ like flux constant in time. 
+
+The limit obtained in this analysis was then used to constraint some interesting sources which exclusively lie in the DG$_{\text{low}}$ sensitive range. The sources were selected based on their declination and expected energies of neutrinos they could produce which could lie in the region explored. The upper limits on the expected neutrino flux are given under the same assumptions the limits are calculated for i.e. a $E^{-2}$ like flux constant in time. The sources were selected from the Roma-BZCAT catalogue~\cite{Massaro:2008ye}, Fermi 4LAC catalogue~\cite{Ballet:2020hze} and from~\cite{Wakely:2007qpa}. The sources along with their type, declination and right ascension (equatorial coordinates) along with the 90\% C.L. upper limits on the flux obtained are listed in table~\ref{tab:source_limits}. 
 
 \begin{table}
   \centering
-  \begin{tabular}{|c|c|c|c|}
+  \begin{tabular}{|c|c|c|c|c|}
     \hline
-    Source & Dec. & R.A. & k$^{\text{90\%CL}}_PS$ \\
-    & [deg] & [deg] & [GeV cm$^{-2}$ s$^{-1}$ sr$^{-1}$] \\
+    Source & Type & Dec. & R.A. & k$^{\text{90\%CL}}_{PS} \times 10^{-7}$ \\
+    & & (deg) & (deg) & (GeV cm$^{-2}$ s$^{-1}$ sr$^{-1}$) \\
     \hline
-    BZQ J0102-7546 & -75.4 & 15.3 & 1.0E+18 \\
-    BZQ J0102-8012 & -80.1 & 15.3 & 1.0E+18  \\
-    BZB J0127-8108 & -81.1 & 21.5 & 1.0E+18 \\
-    BZQ J0217-7347 & -73.8 & 34.26 & 1.2E+18 \\
-    BZQJ0143-6813 & -68.1 & 25.3 & 1.2E+18 \\
+    NGC 2060 & SNR & -69.2 & 84.4 & 4.73 \\
+    30 Dor C & SB & -69.8 & 83.6 & 4.64 \\
+    BZQ J0102-7546 & FSRQ & -75.4 & 15.3 & 4.85 \\
+    BZQ J0102-8012 & FSRQ &-80.1 & 15.3 & 8.44  \\
+    BZB J0127-8108 & BLL & -81.1 & 21.5 & 9.47 \\
+    BZQ J0217-7347 & FSRQ &-73.8 & 34.26 & 4.50 \\
+    BZQ J0143-6813 & FSRQ &-68.1 & 25.5 & 5.34 \\
+    BZQ J0947-7731 & FSRQ &-77.3 & 146.6 & 5.75 \\
+    BZQ J1058-8003 & FSRQ & -80.1 & 164.4 & 8.44 \\
+    BZQ J1733-7935 & FSRQ &-79.4 & 263.2 & 7.81 \\
+    BZB J1843-7430 & BLL& -74.3 & 280.5 & 4.58 \\
+    BZQ J2147-7536 & FSRQ &-75.3 & 326.5 & 4.82 \\
+    BZQ J2356-6820 & FSRQ&-68.2 & 359.0 & 5.28 \\
+    BZB J0028-7045 & BLL&-70.5 & 7.10 & 4.55 \\
+    PKS 0637-752 & FSRQ &-75.2 & 98.6 & 4.78 \\
+    LHA120-N-157B & PWN & -69.16 & 84.43 & 4.74 \\
+    4FGL J0524.7-8304 & BLL & -83.1 & 81.2 & 12.80 \\
+    PSR J1036-8317 & PUL & -83.3 & 159.2 & 13.39 \\
     \hline
   \end{tabular}
-  \caption{Upper limits on the expected neutrino flux at 90\% C.L. for different sources. The limits are calculated for the DG$_{\text{low}}$ channel.}
+  \caption{Upper limits on the expected neutrino flux at 90\% C.L. for different sources. The limits are calculated for the DG$_{\text{low}}$ channel. BLL = BL Lac, FSRQ = Flat Spectrum Radio Quasar, PWN = Pulsar Wind Nebula, SB = Super Bubble.}
   \label{tab:source_limits}
 \end{table}
-
-
-199|BZQJ0143-6813|01 43 18.4 -68 13 26.0|1.223|
-263|BZQJ0217-7347|02 17 45.4 -73 47 21.0|1.234|
-1004|BZQJ0947-7731|09 47 51.4 -77 31 35.0|2.528|
-1205|BZUJ1058-8003|10 58 43.3 -80 03 53.9|0.   |
-2248|BZQJ1733-7935|17 33 40.6 -79 35 54.9|0.876|
-2352|BZBJ1843-7430|18 43 39.7 -74 30 24.9|0.   |
-2541|BZQJ2147-7536|21 47 12.7 -75 36 12.9|1.138|
-2820|BZQJ2356-6820|23 56 00.5 -68 20 03.0|1.716|
-63|BZBJ0028-7045|00 28 41.5 -70 45 15.9|0.   |  
-133|BZQJ0102-7546|01 02 18.5 -75 46 50.9|1.017|  
-134|BZQJ0102-8012|01 02 15.0 -80 12 39.2|1.169|  
-303|BZQJ0217-7347|02 17 45.4 -73 47 21.4|1.234|  
-412|BZQJ0311-7651|03 11 55.2 -76 51 50.9|0.223|  
-447|BZQJ0332-7249|03 32 42.9 -72 49 04.5|2.739|  
+ 
+1 
 
 %%% Local Variables:
 %%% mode: latex
