--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -3024,6 +3024,18 @@ author =  {Pierre Billoir}
   title = {An extensive review on the down-going neutrino systematic uncertainties from the Pierre Auger Observatory},
   year = {2010}
 }
+@article{Sjostrand:2006za,
+  author        = {Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter Z.},
+  title         = {{PYTHIA 6.4 Physics and Manual}},
+  eprint        = {hep-ph/0603175},
+  archiveprefix = {arXiv},
+  reportnumber  = {FERMILAB-PUB-06-052-CD-T, LU-TP-06-13},
+  doi           = {10.1088/1126-6708/2006/05/026},
+  journal       = {JHEP},
+  volume        = {05},
+  pages         = {026},
+  year          = {2006}
+}
 @article{Huege:2022xbo,
   author        = {Huege, Tim},
   collaboration = {CORSIKA},
@@ -3161,6 +3173,37 @@ author =  {Pierre Billoir}
   pages         = {122005},
   year          = {2011},
   note          = {[Erratum: Phys.Rev.D 84, 029902 (2011)]}
+}
+@article{Massaro:2008ye,
+  author        = {Massaro, E. and Giommi, P. and Leto, C. and Marchegiani, P. and Maselli, A. and Perri, M. and Piranomonte, S. and Sclavi, S.},
+  title         = {{Roma-BZCAT: A multifrequency catalogue of Blazars}},
+  eprint        = {0810.2206},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph},
+  doi           = {10.1051/0004-6361:200810161},
+  journal       = {Astron. Astrophys.},
+  volume        = {495},
+  pages         = {691},
+  year          = {2009}
+}
+@article{Ballet:2020hze,
+  author        = {Ballet, J. and Burnett, T. H. and Digel, S. W. and Lott, B.},
+  collaboration = {Fermi-LAT},
+  title         = {{Fermi Large Area Telescope Fourth Source Catalog Data Release 2}},
+  eprint        = {2005.11208},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.HE},
+  month         = {5},
+  year          = {2020}
+}
+@article{Wakely:2007qpa,
+  author    = {Wakely, Scott P. and Horan, Deirdre},
+  title     = {{TeVCat: An online catalog for Very High Energy Gamma-Ray Astronomy}},
+  booktitle = {{30th International Cosmic Ray Conference}},
+  volume    = {3},
+  pages     = {1341--1344},
+  month     = {7},
+  year      = {2007}
 }
 @PhDThesis{Baust:2008,
 	author = "A. Baust et al.",
